force-app/main/default/objects/Forecast_Metric__c/Forecast_Metric__c.object-meta.xml
<CustomObject>
    <description>Defines a measurable metric tracked within a Forecast Configuration, such as revenue, quantity, or weighted amount.</description>
    <label>Forecast Metric</label>
    <nameField><label>Forecast Metric Name</label><type>Text</type></nameField>
    <pluralLabel>Forecast Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>