force-app/main/default/objects/Forecast_Metric__c/fields/Aggregation__c.field-meta.xml
<CustomField>
    <fullName>Aggregation__c</fullName>
    <label>Aggregation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Sum</fullName><default>false</default><label>Sum</label></value>
            <value><fullName>Average</fullName><default>false</default><label>Average</label></value>
            <value><fullName>Count</fullName><default>false</default><label>Count</label></value>
            <value><fullName>Max</fullName><default>false</default><label>Max</label></value>
            <value><fullName>Min</fullName><default>false</default><label>Min</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>