force-app/main/default/objects/Forecast_Metric__c/fields/Display_Format__c.field-meta.xml
<CustomField>
    <fullName>Display_Format__c</fullName>
    <label>Display Format</label>
    <type>Text</type>
    <length>20</length>
</CustomField>