force-app/main/default/objects/Forecast_Metric__c/fields/Forecast_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Configuration__c</fullName>
    <label>Forecast Configuration</label>
    <type>MasterDetail</type>
    <referenceTo>Forecast_Configuration__c</referenceTo>
    <relationshipLabel>Forecast Metrics</relationshipLabel>
    <relationshipName>Forecast_Metrics</relationshipName>
</CustomField>