force-app/main/default/objects/Forecast_Metric__c/fields/Forecast_Group__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Group__c</fullName>
    <label>Forecast Group</label>
    <description
  >If null, metric applies to all groups (config-wide). If set, metric is group-specific.</description>
    <referenceTo>Forecast_Group__c</referenceTo>
    <relationshipName>Forecast_Metrics</relationshipName>
    <relationshipLabel>Forecast Metrics</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>