force-app/main/default/objects/Forecast_Metric__c/fields/Is_Editable__c.field-meta.xml
<CustomField>
    <fullName>Is_Editable__c</fullName>
    <label>Is Editable</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>