force-app/main/default/objects/Forecast_Metric__c/fields/Local_Currency_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Local_Currency_Enabled__c</fullName>
    <label>Local Currency Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>