force-app/main/default/objects/Forecast_Metric__c/fields/Metric_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Metric_API_Name__c</fullName>
    <label>Metric API Name</label>
    <type>Text</type>
    <length>50</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>