force-app/main/default/objects/Forecast_Metric__c/fields/Metric_Label__c.field-meta.xml
<CustomField>
    <fullName>Metric_Label__c</fullName>
    <label>Metric Label</label>
    <type>Text</type>
    <length>50</length>
</CustomField>