force-app/main/default/objects/Forecast_Metric__c/fields/Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>Metric_Type__c</fullName>
    <label>Metric Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Currency</fullName><default>false</default><label>Currency</label></value>
            <value><fullName>Number</fullName><default>false</default><label>Number</label></value>
            <value><fullName>Percentage</fullName><default>false</default><label>Percentage</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>