force-app/main/default/objects/Forecast_Metric__c/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <description>Opportunity field API name this metric reads from</description>
    <type>Text</type>
    <length>100</length>
</CustomField>