force-app/main/default/objects/Forecast_Metric__c/fields/Source_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Lookup_Field__c</fullName>
    <label>Source Lookup Field</label>
    <description
  >When Source_Object != Opportunity: the field on the source object that links back to Opportunity. Examples: OpportunityId (OpportunityLineItem), Opportunity__c (custom child), SBQQ__Opportunity__c (CPQ).</description>
    <type>Text</type>
    <length>100</length>
</CustomField>