force-app/main/default/objects/Forecast_Metric__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <description
  >API name of the object holding the metric's source value. Default Opportunity. Examples: OpportunityLineItem, SBQQ__QuoteLine__c, Product_Bookings__c.</description>
    <type>Text</type>
    <length>100</length>
    <defaultValue>"Opportunity"</defaultValue>
</CustomField>