force-app/main/default/objects/Forecast_Metric__c/fields/Trend_Direction__c.field-meta.xml
<CustomField>
    <fullName>Trend_Direction__c</fullName>
    <label>Trend Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Higher_Is_Better</fullName><default>false</default><label>Higher_Is_Better</label></value>
            <value><fullName>Lower_Is_Better</fullName><default>false</default><label>Lower_Is_Better</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>