force-app/main/default/objects/Forecast_Metric__c/fields/Trend_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Trend_Threshold__c</fullName>
    <label>Trend Threshold</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>